@@ -1,3 +1,8 @@
+2016-02-15  Benno Schulenberg  <bensberg@justemail.net>
+	* src/files.c (read_file): Free not just the struct but also the
+	data it contains, and also when it is the first and only line.
+	This fixes Savannah bug #47153 reported by Mike Frysinger.
+
 2016-02-14  Benno Schulenberg  <bensberg@justemail.net>
 	* src/search.c (do_replace_loop): Make iterating through replacement
 	matches behave again like iterating through search matches: showing
